_build/default/compilateur/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
file' -> . file [ # ]
## Transitions:
-- On XOR shift to state 1
-- On SUB shift to state 10
-- On STORE shift to state 19
-- On RSHIFT shift to state 23
-- On RET shift to state 32
-- On PUSH shift to state 33
-- On POP shift to state 36
-- On OR shift to state 38
-- On MOV shift to state 47
-- On LSHIFT shift to state 52
-- On LOAD shift to state 61
-- On LABEL_DEC shift to state 64
-- On JMP shift to state 65
-- On JLT shift to state 68
-- On JLE shift to state 71
-- On JGT shift to state 74
-- On JGE shift to state 77
-- On JE shift to state 80
-- On CMP shift to state 83
-- On CALL shift to state 89
-- On AND shift to state 92
-- On ADD shift to state 101
-- On list(line) shift to state 110
-- On line shift to state 112
-- On instr shift to state 114
-- On file shift to state 115
## Reductions:
-- On EOF
--   reduce production list(line) ->

State 1:
## Known stack suffix:
## XOR
## LR(1) items:
instr -> XOR . REG REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> XOR . IMM REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> XOR . REG IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 2
-- On IMM shift to state 7
## Reductions:

State 2:
## Known stack suffix:
## XOR REG
## LR(1) items:
instr -> XOR REG . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> XOR REG . IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 3
-- On IMM shift to state 5
## Reductions:

State 3:
## Known stack suffix:
## XOR REG REG
## LR(1) items:
instr -> XOR REG REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## XOR REG REG REG
## LR(1) items:
instr -> XOR REG REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> XOR REG REG REG

State 5:
## Known stack suffix:
## XOR REG IMM
## LR(1) items:
instr -> XOR REG IMM . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## XOR REG IMM REG
## LR(1) items:
instr -> XOR REG IMM REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> XOR REG IMM REG

State 7:
## Known stack suffix:
## XOR IMM
## LR(1) items:
instr -> XOR IMM . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## XOR IMM REG
## LR(1) items:
instr -> XOR IMM REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## XOR IMM REG REG
## LR(1) items:
instr -> XOR IMM REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> XOR IMM REG REG

State 10:
## Known stack suffix:
## SUB
## LR(1) items:
instr -> SUB . REG REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> SUB . IMM REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> SUB . REG IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 11
-- On IMM shift to state 16
## Reductions:

State 11:
## Known stack suffix:
## SUB REG
## LR(1) items:
instr -> SUB REG . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> SUB REG . IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 12
-- On IMM shift to state 14
## Reductions:

State 12:
## Known stack suffix:
## SUB REG REG
## LR(1) items:
instr -> SUB REG REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## SUB REG REG REG
## LR(1) items:
instr -> SUB REG REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> SUB REG REG REG

State 14:
## Known stack suffix:
## SUB REG IMM
## LR(1) items:
instr -> SUB REG IMM . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## SUB REG IMM REG
## LR(1) items:
instr -> SUB REG IMM REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> SUB REG IMM REG

State 16:
## Known stack suffix:
## SUB IMM
## LR(1) items:
instr -> SUB IMM . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## SUB IMM REG
## LR(1) items:
instr -> SUB IMM REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## SUB IMM REG REG
## LR(1) items:
instr -> SUB IMM REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> SUB IMM REG REG

State 19:
## Known stack suffix:
## STORE
## LR(1) items:
instr -> STORE . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> STORE . REG IMM [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## STORE REG
## LR(1) items:
instr -> STORE REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> STORE REG . IMM [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 21
-- On IMM shift to state 22
## Reductions:

State 21:
## Known stack suffix:
## STORE REG REG
## LR(1) items:
instr -> STORE REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> STORE REG REG

State 22:
## Known stack suffix:
## STORE REG IMM
## LR(1) items:
instr -> STORE REG IMM . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> STORE REG IMM

State 23:
## Known stack suffix:
## RSHIFT
## LR(1) items:
instr -> RSHIFT . REG REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> RSHIFT . IMM REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> RSHIFT . REG IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 24
-- On IMM shift to state 29
## Reductions:

State 24:
## Known stack suffix:
## RSHIFT REG
## LR(1) items:
instr -> RSHIFT REG . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> RSHIFT REG . IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 25
-- On IMM shift to state 27
## Reductions:

State 25:
## Known stack suffix:
## RSHIFT REG REG
## LR(1) items:
instr -> RSHIFT REG REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## RSHIFT REG REG REG
## LR(1) items:
instr -> RSHIFT REG REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> RSHIFT REG REG REG

State 27:
## Known stack suffix:
## RSHIFT REG IMM
## LR(1) items:
instr -> RSHIFT REG IMM . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## RSHIFT REG IMM REG
## LR(1) items:
instr -> RSHIFT REG IMM REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> RSHIFT REG IMM REG

State 29:
## Known stack suffix:
## RSHIFT IMM
## LR(1) items:
instr -> RSHIFT IMM . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## RSHIFT IMM REG
## LR(1) items:
instr -> RSHIFT IMM REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## RSHIFT IMM REG REG
## LR(1) items:
instr -> RSHIFT IMM REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> RSHIFT IMM REG REG

State 32:
## Known stack suffix:
## RET
## LR(1) items:
instr -> RET . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> RET

State 33:
## Known stack suffix:
## PUSH
## LR(1) items:
instr -> PUSH . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> PUSH . IMM [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 34
-- On IMM shift to state 35
## Reductions:

State 34:
## Known stack suffix:
## PUSH REG
## LR(1) items:
instr -> PUSH REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> PUSH REG

State 35:
## Known stack suffix:
## PUSH IMM
## LR(1) items:
instr -> PUSH IMM . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> PUSH IMM

State 36:
## Known stack suffix:
## POP
## LR(1) items:
instr -> POP . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 37
## Reductions:

State 37:
## Known stack suffix:
## POP REG
## LR(1) items:
instr -> POP REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> POP REG

State 38:
## Known stack suffix:
## OR
## LR(1) items:
instr -> OR . REG REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> OR . IMM REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> OR . REG IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 39
-- On IMM shift to state 44
## Reductions:

State 39:
## Known stack suffix:
## OR REG
## LR(1) items:
instr -> OR REG . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> OR REG . IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 40
-- On IMM shift to state 42
## Reductions:

State 40:
## Known stack suffix:
## OR REG REG
## LR(1) items:
instr -> OR REG REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 41
## Reductions:

State 41:
## Known stack suffix:
## OR REG REG REG
## LR(1) items:
instr -> OR REG REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> OR REG REG REG

State 42:
## Known stack suffix:
## OR REG IMM
## LR(1) items:
instr -> OR REG IMM . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 43
## Reductions:

State 43:
## Known stack suffix:
## OR REG IMM REG
## LR(1) items:
instr -> OR REG IMM REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> OR REG IMM REG

State 44:
## Known stack suffix:
## OR IMM
## LR(1) items:
instr -> OR IMM . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 45
## Reductions:

State 45:
## Known stack suffix:
## OR IMM REG
## LR(1) items:
instr -> OR IMM REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 46
## Reductions:

State 46:
## Known stack suffix:
## OR IMM REG REG
## LR(1) items:
instr -> OR IMM REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> OR IMM REG REG

State 47:
## Known stack suffix:
## MOV
## LR(1) items:
instr -> MOV . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> MOV . IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 48
-- On IMM shift to state 50
## Reductions:

State 48:
## Known stack suffix:
## MOV REG
## LR(1) items:
instr -> MOV REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 49
## Reductions:

State 49:
## Known stack suffix:
## MOV REG REG
## LR(1) items:
instr -> MOV REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> MOV REG REG

State 50:
## Known stack suffix:
## MOV IMM
## LR(1) items:
instr -> MOV IMM . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 51
## Reductions:

State 51:
## Known stack suffix:
## MOV IMM REG
## LR(1) items:
instr -> MOV IMM REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> MOV IMM REG

State 52:
## Known stack suffix:
## LSHIFT
## LR(1) items:
instr -> LSHIFT . REG REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> LSHIFT . IMM REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> LSHIFT . REG IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 53
-- On IMM shift to state 58
## Reductions:

State 53:
## Known stack suffix:
## LSHIFT REG
## LR(1) items:
instr -> LSHIFT REG . REG REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
instr -> LSHIFT REG . IMM REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 54
-- On IMM shift to state 56
## Reductions:

State 54:
## Known stack suffix:
## LSHIFT REG REG
## LR(1) items:
instr -> LSHIFT REG REG . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 55
## Reductions:

State 55:
## Known stack suffix:
## LSHIFT REG REG REG
## LR(1) items:
instr -> LSHIFT REG REG REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> LSHIFT REG REG REG

State 56:
## Known stack suffix:
## LSHIFT REG IMM
## LR(1) items:
instr -> LSHIFT REG IMM . REG [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
-- On REG shift to state 57
## Reductions:

State 57:
## Known stack suffix:
## LSHIFT REG IMM REG
## LR(1) items:
instr -> LSHIFT REG IMM REG . [ XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD ]
## Transitions:
## Reductions:
-- On XOR SUB STORE RSHIFT RET PUSH POP OR MOV LSHIFT LOAD LABEL_DEC JMP JLT JLE JGT JGE JE EOF CMP CALL AND ADD
--   reduce production instr -> LSHIFT REG IMM REG
